--- a/app/page.module.css
+++ b/app/page.module.css
@@ -92,7 +92,7 @@
 }
 
 .runButton:hover {
-  background-color: #1d4ed8;
+  background-color: #b8181c;
 }
 
 .runButton:disabled {
@@ -150,7 +150,7 @@
 }
 
 .copyButton:hover {
-  background-color: #1d4ed8;
+  background-color: #b8181c;
 }
 
 .resultsText {
