--- a/app/page.module.css
+++ b/app/page.module.css
@@ -79,6 +79,17 @@
   margin-top: 4px;
 }
 
+.helpLink {
+  color: #2563eb;
+  text-decoration: none;
+  font-size: 12px;
+  margin-left: 4px;
+}
+
+.helpLink:hover {
+  text-decoration: underline;
+}
+
 .inputRow {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -88,7 +99,7 @@
 .runButton {
   width: 100%;
   padding: 12px;
-  background-color: #2563eb;
+  background-color: #ed1c24;
   color: white;
   font-weight: 600;
   border: none;
@@ -99,7 +110,7 @@
 }
 
 .runButton:hover {
-  background-color: #1d4ed8;
+  background-color: #c91820;
 }
 
 .runButton:disabled {
@@ -146,7 +157,7 @@
 .copyButton {
   width: 100%;
   padding: 12px;
-  background-color: #2563eb;
+  background-color: #ed1c24;
   color: white;
   font-weight: 600;
   border: none;
@@ -157,7 +168,7 @@
 }
 
 .copyButton:hover {
-  background-color: #1d4ed8;
+  background-color: #c91820;
 }
 
 .resultsText {
